--- a/1_basic_concept.ipynb
+++ b/1_basic_concept.ipynb
@@ -639,8 +639,390 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# python实现"
+    "# python实现\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:00:07.716717Z",
+     "start_time": "2019-10-23T12:00:06.559496Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 频率"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:17:59.992673Z",
+     "start_time": "2019-10-23T12:17:59.980808Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([42, 96, 67, 51, 68, 42, 77, 49, 86, 13, 32, 57, 87, 70, 15, 38, 67,\n",
+       "       45, 32, 25, 77, 42,  3, 65, 28, 62, 35, 13, 50, 49,  7, 74, 17, 64,\n",
+       "       89, 60, 41, 26, 78, 38, 98, 26, 16, 95, 99, 71, 90, 78, 40, 50, 96,\n",
+       "       36, 60, 26, 47, 20, 77, 86, 98, 68,  5, 85, 67, 36, 27, 73, 97, 32,\n",
+       "       65, 76, 54,  3, 42, 39, 88, 57, 64, 74, 21, 29, 53,  7,  2, 32, 29,\n",
+       "        3,  5, 32, 39, 72, 56,  5, 86, 62, 64, 48, 41, 66, 67, 80])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 产生100(size)个1到100的随机整数\n",
+    "data = np.random.randint(1,101,size=100) \n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:25:16.142251Z",
+     "start_time": "2019-10-23T12:25:16.124172Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# numbers:返回去重后排好序的数据数组， counts返回出现的次数数组\n",
+    "numbers, counts = np.unique(data, return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:30:11.008198Z",
+     "start_time": "2019-10-23T12:30:10.989681Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data2 = pd.DataFrame({'数字':numbers, '频率':counts/100})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 排列、组合与阶乘\n",
+    "### 算出结果"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:33:27.271953Z",
+     "start_time": "2019-10-23T12:33:27.258643Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import scipy.special as special"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 全排列(permutation)\n",
+    "$A_{n}^{k}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:47:47.977349Z",
+     "start_time": "2019-10-23T12:47:47.956735Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# C52\n",
+    "special.perm(5,2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. 组合(combination)\n",
+    "$C_{n}^{k}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:48:37.288702Z",
+     "start_time": "2019-10-23T12:48:37.227925Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "special.comb(5,2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. 阶乘(factorial)\n",
+    "$N!$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:50:46.307072Z",
+     "start_time": "2019-10-23T12:50:46.293473Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(120.)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "special.factorial(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 列出组合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:51:48.389064Z",
+     "start_time": "2019-10-23T12:51:48.384060Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:53:33.704672Z",
+     "start_time": "2019-10-23T12:53:33.692592Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n",
+      "(1, 3)\n",
+      "(1, 4)\n",
+      "(1, 5)\n",
+      "(2, 3)\n",
+      "(2, 4)\n",
+      "(2, 5)\n",
+      "(3, 4)\n",
+      "(3, 5)\n",
+      "(4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 组合\n",
+    "# C5 2\n",
+    "combinations = itertools.combinations([1,2,3,4,5],2)\n",
+    "for combination in combinations:\n",
+    "    print(combination)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:54:49.052265Z",
+     "start_time": "2019-10-23T12:54:49.041616Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n",
+      "(1, 3)\n",
+      "(1, 4)\n",
+      "(2, 1)\n",
+      "(2, 3)\n",
+      "(2, 4)\n",
+      "(3, 1)\n",
+      "(3, 2)\n",
+      "(3, 4)\n",
+      "(4, 1)\n",
+      "(4, 2)\n",
+      "(4, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 全排列\n",
+    "# A 4 2\n",
+    "permutations = itertools.permutations([1,2,3,4],2)\n",
+    "for permutation in permutations:\n",
+    "    print(permutation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T12:56:51.197794Z",
+     "start_time": "2019-10-23T12:56:51.175746Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 4)\n",
+      "(1, 5)\n",
+      "(1, 6)\n",
+      "(2, 4)\n",
+      "(2, 5)\n",
+      "(2, 6)\n",
+      "(3, 4)\n",
+      "(3, 5)\n",
+      "(3, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 笛卡尔积\n",
+    "products = itertools.product([1,2,3],[4,5,6])\n",
+    "for product in products:\n",
+    "    print(product)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 集合运算"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T13:05:31.223449Z",
+     "start_time": "2019-10-23T13:05:31.209324Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 5, 7, 9}\n",
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 11}\n",
+      "{2, 4, 6, 8, 11}\n",
+      "{8, 2, 4, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 奇数\n",
+    "odds = set([1,3,5,7,9,11])\n",
+    "# 自然数\n",
+    "naturals = set([1,2,3,4,5,6,7,8,9])\n",
+    "\n",
+    "# 求交集 A ∩ B\n",
+    "print(odds & naturals)\n",
+    "# 并集 A ∪ B\n",
+    "print(odds | naturals)\n",
+    "# 德摩根律、对称差 symmetric difference\n",
+    "print(odds ^ naturals)\n",
+    "\n",
+    "# 差集\n",
+    "print(naturals-odds)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
