--- a/4_Numerical_characteristics_of_random_variables.ipynb
+++ b/4_Numerical_characteristics_of_random_variables.ipynb
@@ -372,11 +372,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**如果直接使用$\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(X_i - \\bar{X})^2$作为估计，那么你会倾向于低估方差！**  \n",
+    "**如果直接使用$\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(X_i - \n",
+    "\\bar{X})^2$作为估计，那么你会倾向于低估方差！**  \n",
     "这是因为：  \n",
     "$\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(X_i - \\bar{X})^2 $  \n",
-    "$=\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}[(X_i - \\mu) + (\\mu - \\bar{x})]^2$   $=\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(X_i - \\mu)^2 + \\frac{2}{n} \\displaystyle \\sum_{i=1}^{n}(X_i -\\mu)(\\mu-\\bar{X})+\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(\\mu-\\bar{X})^2$  \n",
-    "$=\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(X_i -\\mu)^2 + 2(\\bar{X}-\\mu)(\\mu-\\bar{X})+(\\mu-\\bar{X}^2)\\\\= \\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(X_i - \\mu) - (\\mu - \\bar{X})^2$\n",
+    "$=\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}[(X_i - \\mu) + (\\mu - \\bar{X})]^2$   $=\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(X_i - \\mu)^2 + \\frac{2}{n} \\displaystyle \\sum_{i=1}^{n}(X_i -\\mu)(\\mu-\\bar{X})+\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(\\mu-\\bar{X})^2$  \n",
+    "$=\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(X_i -\\mu)^2 + 2(\\bar{X}-\\mu)(\\mu-\\bar{X})+(\\mu-\\bar{X})^2\\\\= \\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(X_i - \\mu)^2 - (\\mu - \\bar{X})^2$\n",
     "\n",
     "换言之，除非正好${\\bar{X} = \\mu}$，否则我们一定有\n",
     "$\\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(X_i - \\bar{X})^2  < \\frac{1}{n} \\displaystyle \\sum_{i=1}^{n}(X_i - \\mu^2 $\n",
